--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-modal-dropdown": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
